api/src/main/java/com/example/api/error/exception/MissingAttributeException.java
package com.example.api.error.exception;

public class MissingAttributeException extends Exception{
    public MissingAttributeException(String message) {
        super(message);
    }
}
